syntax = "proto3";
package echo;

service Echo {
    rpc hello (EchoRequest) returns (EchoResponse);
}

message EchoRequest {
    string input = 1;
    uint64 echo_delay_millis = 2;
}

message EchoResponse {
    string output = 1;
}